src/objects/BGBK__Payment__c.object
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Payment Allocations of receipts</description>
    <fields>
        <fullName>BGBK__Amount_Available__c</fullName>
        <description>Deprecated.</description>
        <formula>BGBK__Amount__c - BGBK__Amount_Used__c - BGBK__Refunded_Amount__c - BGBK__Rejected_Amount__c + BGBK__Loss_Overage_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Amount_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deprecated.</description>
        <label>Used Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Amount__c</fullName>
        <description>Payment amount that was applied to to the fee&apos;s parent (license, permit, etc.) during this transaction.</description>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Complaint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this field when a deposit iis used to pay a fee.</description>
        <label>Deposit</label>
        <referenceTo>MUSW__Deposit__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Description__c</fullName>
        <description>Deprecated.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date of the payment transaction.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BGBK__Initial_Fund_Reference_Number_del__c</fullName>
        <description>Deprecated.</description>
        <formula>IF(ISPICKVAL(BGBK__Permit__r.MUSW__Permit_Type__c, &apos;Surface Impact Payment&apos;), &apos;534 060 0102 534&apos;,&apos;533 060 0102 533&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Fund Reference No DO NOT RELEASE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>BGBK__Bill__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__License1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License1__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__License2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Loss_Overage_Amount__c</fullName>
        <description>Deprecated.</description>
        <inlineHelpText>Minor adjustment to balance accounts. Used under a specified threshold</inlineHelpText>
        <label>Loss/Overage Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Manual_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated.</description>
        <label>Manual Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Source__c</fullName>
        <description>Source of fee payment: Either Receipt record or Deposit record</description>
        <formula>IF(OR(ISNULL( BGBK__Deposit__c ), BGBK__Deposit__c  = &quot;&quot;),
	If(OR(ISNULL( BGBK__Receipt__c),  BGBK__Receipt__c = &quot;&quot;),
		&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; BGBK__Receipt__c,BGBK__Receipt__r.Name,&quot;_parent&quot; )),
	HYPERLINK( &quot;../&quot; &amp; BGBK__Deposit__c,BGBK__Deposit__r.Name,&quot;_parent&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Planning_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Planning_Application__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Purpose__c</fullName>
        <description>Deprecated.</description>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BGBK__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application 1 Deposit</fullName>
                </value>
                <value>
                    <fullName>Application 2 Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Receipt__c</fullName>
        <label>Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BGBK__Refund_Receipt_Payer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated.</description>
        <inlineHelpText>This field is now deprecated. Use Refundee instead</inlineHelpText>
        <label>Refund Receipt Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Refunded_Amount__c</fullName>
        <description>Deprecated.</description>
        <inlineHelpText>Total of any Refunds</inlineHelpText>
        <label>Refunded Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Refundee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated.</description>
        <label>Refundee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Rejected_Amount__c</fullName>
        <description>Deprecated.</description>
        <label>Rejected Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return</label>
        <referenceTo>BGBK__Return__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                    <default>true</default>
                    <label>Deposit</label>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fine</description>
        <label>Fine</label>
        <referenceTo>Fine__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for fines and penalty from complaints</description>
        <label>Legal Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Amount_Remaining__c</fullName>
        <formula>BGBK__Receipt__r.MUSW__Amount_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt - Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipt_Amount_Tendered__c</fullName>
        <formula>BGBK__Receipt__r.MUSW__Amount_Tendered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt - Amount Tendered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <formula>IF(OR(ISNULL( BGBK__Permit2__c ), BGBK__Permit2__c  = &quot;&quot;),
	If(OR(ISNULL( BGBK__Application2__c ),  BGBK__Application2__c  = &quot;&quot;),
		If(OR(ISNULL( BGBK__Complaint2__c ),  BGBK__Complaint2__c  = &quot;&quot;),
			IF(OR(ISNULL( BGBK__License2__c ),  BGBK__License2__c  = &quot;&quot;),
			&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; BGBK__License2__c, BGBK__License2__r.Name ,&quot;_parent&quot; )),
			HYPERLINK( &quot;../&quot; &amp; BGBK__Complaint2__c,BGBK__Complaint2__r.Name,&quot;_parent&quot; )),
		HYPERLINK( &quot;../&quot; &amp; BGBK__Application2__c,BGBK__Application2__r.Name,&quot;_parent&quot; )),
	HYPERLINK( &quot;../&quot; &amp; BGBK__Permit2__c,BGBK__Permit2__r.Name,&quot;_parent&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is this related to a renewal application?</description>
        <label>Renewal Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PY-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BGBK__Amount_less_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>BGBK__Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Payment Amount must be positive. Cancel or correct amount to &gt;= 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Payment_Amount_less_than_Available</fullName>
        <active>true</active>
        <description>Cannot refund used amounts.</description>
        <errorConditionFormula>AND(BGBK__Amount__c - BGBK__Amount_Used__c  &lt;  BLANKVALUE(BGBK__Refunded_Amount__c,0), ISCHANGED(BGBK__Amount__c))</errorConditionFormula>
        <errorMessage>cannot adjust Payment Amount below amount Available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Payment_Refund_greater_than_Available</fullName>
        <active>true</active>
        <description>Cannot refund used amounts.</description>
        <errorConditionFormula>AND(BGBK__Amount__c - BGBK__Amount_Used__c + BLANKVALUE(BGBK__Loss_Overage_Amount__c,0)  &lt;  BLANKVALUE(BGBK__Refunded_Amount__c,0), ISCHANGED(BGBK__Refunded_Amount__c))</errorConditionFormula>
        <errorDisplayField>BGBK__Refunded_Amount__c</errorDisplayField>
        <errorMessage>Cannot Refund more than the Available Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Payment_Reject_greater_than_Available</fullName>
        <active>true</active>
        <description>Cannot reject used amounts.</description>
        <errorConditionFormula>AND(BGBK__Amount__c - BGBK__Amount_Used__c + BLANKVALUE(BGBK__Loss_Overage_Amount__c,0)  &lt;  BLANKVALUE(BGBK__Rejected_Amount__c,0), ISCHANGED(BGBK__Rejected_Amount__c))</errorConditionFormula>
        <errorDisplayField>BGBK__Rejected_Amount__c</errorDisplayField>
        <errorMessage>Cannot Reject more than the Available Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Payment_Used_greater_than_Amount</fullName>
        <active>true</active>
        <description>Cannot use more than allocated</description>
        <errorConditionFormula>AND((BGBK__Amount_Used__c - BLANKVALUE(BGBK__Loss_Overage_Amount__c,0))  &gt; (BGBK__Amount__c -  BLANKVALUE(BGBK__Refunded_Amount__c,0)), ISCHANGED(BGBK__Amount_Used__c))</errorConditionFormula>
        <errorMessage>Cannot Use (pay) more than Payment Amount (minus any Refunds)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Payment_change_more_than_Receipt_avail</fullName>
        <active>true</active>
        <description>If payment amount is changed, and the parent receipt is filled in on this payment, and difference of the old amount to the new amount is greater than what is available on the receipt...error</description>
        <errorConditionFormula>AND( ISCHANGED(BGBK__Amount__c),   NOT(ISBLANK(BGBK__Receipt__c)), BGBK__Amount__c - PRIORVALUE(BGBK__Amount__c) &gt;    BGBK__Receipt__r.MUSW__Amount_Available__c)</errorConditionFormula>
        <errorMessage>Cannot increase Payment Amount greater than what is available on Receipt. Reduce Amount or cancel change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Licensee_does_not_match_the_account</fullName>
        <active>true</active>
        <description>Validation to ensure Licensee matches the account on the Deposit</description>
        <errorConditionFormula>NOT(ISBLANK( BGBK__Deposit__c)) &amp;&amp; (BGBK__Deposit__r.MUSW__Account__c  &lt;&gt;   BGBK__License2__r.MUSW__Primary_Licensee__c)</errorConditionFormula>
        <errorMessage>Licensee does not match the account on the Deposit</errorMessage>
    </validationRules>
</CustomObject>